--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,5 +27,6 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     api 'com.android.support:design:27.1.1'
-    api'org.jsoup:jsoup:1.10.2'
+    api 'org.jsoup:jsoup:1.10.2'
+    api 'com.android.support:cardview-v7:27.1.1'
 }
