--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,4 +29,5 @@ dependencies {
     api 'com.android.support:design:27.1.1'
     api 'org.jsoup:jsoup:1.10.2'
     api 'com.android.support:cardview-v7:27.1.1'
+    api'com.google.code.gson:gson:2.8.0'
 }
